--- a/01_dockerfiles/ex00/Dockerfile
+++ b/01_dockerfiles/ex00/Dockerfile
@@ -1,5 +1,3 @@
 FROM alpine
-MAINTAINER Julien Dumay <judumay@student.42.fr>
-RUN apk update
-RUN apk add vim
-ENTRYPOINT vim
+RUN apk update && apk add vim
+CMD ["vim"]
